Fixes OGNL-91. God that bug sucked ass.... Finally did numeric coercion refactoring whether I liked it or not.